--- a/Lockers/templates/includeScripts.html
+++ b/Lockers/templates/includeScripts.html
@@ -1,4 +1,13 @@
+<!--Stylesheets-->
 <link rel="stylesheet" href="{{ STATIC_URL }}css/foundation.css" />
+<link rel="stylesheet" href="{{ STATIC_URL }}css/responsive-tables.css" />
+
+<!--Javascript-->
+<script src="{{ STATIC_URL}}js/vendor/jquery.min.js"></script>
+<script src="{{ STATIC_URL }}js/foundation/foundation.js"></script>
+<script src="{{ STATIC_URL }}js/foundation/foundation.reveal.js"></script>
+<script src="{{ STATIC_URL }}js/foundation/foundation.dropdown.js"></script>
+<script src="{{ STATIC_URL }}js/foundation/responsive-tables.js"></script>
 <script src="{{ STATIC_URL }}js/vendor/modernizr.js"></script>
-<script src="{{ STATIC_URL }}js/vendor/jquery.js"></script>
-<script src="{{ STATIC_URL }}js/foundation.min.js"></script>
+
+
