--- a/Lockers/templates/admin_users.html
+++ b/Lockers/templates/admin_users.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    {% include "includeScripts.html" %}
-    {% include "admin_usersScripts.html" %}
+
+
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Administración de lockers</title>
+    {% include "includeScripts.html" %}
+    <script src="{{ STATIC_URL}}js/app/admin_users.js"></script>
+
+
   </head>
   <body>
     <nav class="top-bar" data-topbar>
@@ -62,8 +66,8 @@
 
   <div class="row">
 
-    <div class="large-9 columns">
-        <table>
+
+        <table class="responsive">
           <thead>
             <tr>
               <th>ID</th>
@@ -76,7 +80,7 @@
           </thead>
           <tbody id="table_body"></tbody>
         </table>
-      </div>
+
 
     </div>
 
